--- a/src/app/components/add-team/add-team.component.html
+++ b/src/app/components/add-team/add-team.component.html
@@ -1,1 +1,20 @@
-<p>add-team works!</p>
+
+<app-banner [title]="title" ></app-banner>
+
+  <div class="site-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <form  #addteamForm="ngForm"  (ngSubmit)="addTeam()">
+            <div class="form-group">
+              <input type="text" [(ngModel)]="team.name"   name="a" class="form-control" placeholder="Team name">
+            </div>            
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary py-3 px-5"  [value]="title">
+            </div>
+          </form>  
+        </div>
+      
+      </div>
+    </div>
+  </div>
