--- a/src/app/components/player-form/player-form.component.html
+++ b/src/app/components/player-form/player-form.component.html
@@ -15,6 +15,9 @@
                         <input type="text" class="form-control" placeholder="Position" [(ngModel)]="player.position" name="c">
                     </div>
                     <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Team" [(ngModel)]="player.team" name="d">
+                    </div>
+                    <div class="form-group">
                         <input type="submit" class="btn btn-primary py-3 px-5" [value]="title">
                     </div>
                 </form>
